# pylimma

./: .gitignore  README.md  pyproject.toml
pylimma/: __init__.py  _utils.py  contrasts.py  ebayes.py  lmfit.py  toptable.py
tests/: conftest.py  test_contrasts.py  test_ebayes.py  test_lmfit.py  test_toptable.py
tests/reference_data/: E.csv  cf_coef.csv  cf_pvalue.csv  cf_stdev_unscaled.csv  cf_t.csv  design.csv  eb_df_total.csv  eb_lods.csv  eb_pvalue.csv  eb_s2post.csv  eb_s2prior.csv  eb_t.csv  generate_reference.R  lmfit_coef.csv  lmfit_cov_coef.csv  lmfit_df_residual.csv  lmfit_sigma.csv  lmfit_stdev_unscaled.csv  toptable.csv
